# risk-analyzer-google-cloud-platform

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/gcp_risk_analyzer/: __init__.py  __main__.py  analyzer.py  reporter.py
src/gcp_risk_analyzer/models/: __init__.py  finding.py
tests/: conftest.py
tests/integration/: test_cli_smoke.py
tests/unit/: test_analyzer.py  test_finding_model.py  test_reporter.py
