[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-risk-analyzer"
version = "0.1.0"
description = "CLI tool that audits GCP projects for security misconfigurations across Vertex AI, Cloud Storage, and IAM."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Christian Dave Montalban" }
]
keywords = ["gcp", "security", "risk", "audit", "cloud"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "google-auth==2.29.0",
    "google-cloud-notebooks==1.11.0",
    "google-cloud-storage==2.16.0",
    "google-cloud-resource-manager==1.12.3",
]

[project.scripts]
gcp-risk-analyzer = "gcp_risk_analyzer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
